[package]
name = "get_maintainence_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-rds = "0.28.0"
aws-sdk-sesv2 = "0.28.0"
prettytable = "0.10.0"
tokio = { version = "1", features = ["full"] }

[dependencies.clap]
version = "4.2.1"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter"]
